SimpLanPlus/Tests/test4.txt
{
	^int a = new int;
	^int b = new int;
	void h(^int x, ^int y){ 
		if (y^==0) 
			delete x ;
		else { 
			x^ = x^ - 1; 
			h(y,x) ;
		} 
	}
	a^ = 4;
	h(b, a);

}
//Type checking ok! Type of the program is: void
//Code generated! Assembling and running generated code.
//You had: 0 lexical errors and 0 syntax errors.
//Starting Virtual Machine...
